finnaly fix the overflow issues

--- a/cart.css
+++ b/cart.css
@@ -1,9 +1,6 @@
 
 
 /* header  */
-.header{
-  overflow-x: hidden;
-}
 
 .nav-links ul li a {
   color:  black;
