--- a/howto.css
+++ b/howto.css
@@ -1,9 +1,7 @@
 
 
 /* header  */
-.header{
-  overflow-x: hidden;
-}
+
 
 .nav-links ul li a {
   color:  black;
