--- a/style.css
+++ b/style.css
@@ -356,9 +356,7 @@ footer {
 
 
 @media (max-width: 768px) {
-    body {
-        overflow-x: hidden;
-    }
+
 
     .logo {
         width: 6rem;
@@ -366,33 +364,36 @@ footer {
 
     }
 
-
     .nav-links {
-        position: absolute;
-        transition: transform 0.5s ease-out;
-        transform: translateX(100%);
-        background-color: black;
-        right: 0;
+        position: fixed;
         top: 0;
-        width: 100vw;
-        height: 100vh;
-        z-index: 100;
+        right: 0;
+        height: 110vh;
+        width: 110vw; 
+        background-color: rgba(0, 0, 0, 0.9); 
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
+        transform: translateX(100%); 
+        transition: transform 0.5s ease-out; 
+        z-index: 1000;
     }
-
-    .hamburger {
-        display: block;
-        color: white;
-        font-size: 2rem;
-        cursor: pointer;
-        z-index: 999;
-    }
-
+    
+    /* Active class to slide in the menu */
     .nav-links.active {
         transform: translateX(0);
     }
+    
+    .hamburger {
+        display: block;
+        position: relative;
+        z-index: 1001; 
+        color: white;
+        font-size: 2rem;
+        cursor: pointer;
+    }
+    
 
     .nav-links ul {
         display: flex;
